--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
+html{
   text-align: center;
+  background: linear-gradient(40deg, #4e8196, #17749c, #432fa8);
+  height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.calculator{
+  margin: 10em auto 0 auto;
+  width: 300px;
+  height: 430px;
+  border: solid 1px black;
+  padding: 5px;
+  background: linear-gradient(35deg,#5f5d61, #7f7c82, #59565c);
+  border-radius: 3px;
+  box-shadow: 2px -2px 5px black;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#buttons{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.btn{
+  background-color: aliceblue;
 }
 
-.App-link {
-  color: #61dafb;
+
+#clear{
+  grid-column: 1/ span 2;
+  background-color: #87072b;
+  color: aliceblue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#zero{
+  grid-column: 1/ span 2;
+}
+
+#equals{
+  grid-row: 4/ span 2;
+  grid-column: 4;
+  background-color: #1c0787;
+  color: aliceblue;
+  font-weight: bold;
+}
+
+.calc{
+  background-color: #86b5c5;
+  font-weight: bold;
+}
+
+.btn{
+  font-size: 1.5rem;
+  padding: 15px;
+}
+
+#current-calc, #display{
+  height: 20px;
+  background-color: #242b2e96;
+  margin: 7px auto;
+  font-size: 1.2rem;
+  color: aliceblue;
+  text-align: end;
+  padding: 15px;
 }
